12/14/13:
	Push more code into its own functions
	Fix issue with movie titles that have commas

12/12/13: Released as version 1.2
	Exit after user-defined number of 404 pages.
	Optionally check if pages are actually from IMDB

12/04/13: Released as version 1.1
	Gracefully handle 404 pages
	Skip delay on last fetch
	Improved boilerplate
	Fix rm statement
	Fix comments

12/02/13:
	Add support for external config file
	Example config file added

12/02/13: Released as version 1.0
	First public release, pretty much works.